@@ -21,7 +21,7 @@
 
 const crypto = require( 'crypto' );
 const fs = require( 'fs' );
-const request = require( 'request' );
+const $as_request = require( 'futoin-request' );
 const Ajv = ( () => {
     if ( process.env.NODE_ENV === 'production' ) {
         return null;
@@ -49,57 +49,56 @@ module.exports = ( spectools ) => {
     } = ST;
 
     const _loadURL = ( as, base_url, file_name ) => {
-        as.add( ( read_as ) => {
+        as.add( ( as ) => {
             const uri = `${base_url}/${file_name}`;
 
-            const on_read = ( data, err ) => {
-                if ( !read_as ) {
-                    return;
-                }
-
-                if ( !err ) {
-                    try {
-                        const res = JSON.parse( data );
-                        read_as.success( res );
-                        return;
-                    } catch ( e ) {
-                        spectools.emit(
-                            'error',
-                            `Invalid JSON for '${uri}": ${e}`
-                        );
-
-                        try {
-                            as.break();
-                        } catch ( _ ) {
-                            // pass
-                        }
-                    }
-                }
-
+            const parse_data = ( as, data ) => {
                 try {
-                    read_as.continue();
+                    const res = JSON.parse( data );
+                    as.success( res );
                 } catch ( e ) {
-                    // ignore
+                    spectools.emit(
+                        'error',
+                        `Invalid JSON for '${uri}": ${e}`
+                    );
+                    as.break();
                 }
             };
 
             if ( uri.substr( 0, 4 ) === 'http' ) {
-                request( uri, ( error, _response, body ) => {
-                    on_read( body, error );
-                } );
+                as.add(
+                    ( as ) => $as_request( as, uri ),
+                    ( as, err ) => {
+                        as.continue();
+                    }
+                );
+                as.add( ( as, _, data ) => parse_data( as, data ) );
             } else {
                 fs.readFile(
                     uri,
                     { encoding : 'utf8' },
                     ( err, data ) => {
-                        on_read( data, err );
+                        if ( !as.state ) {
+                            return;
+                        }
+
+                        if ( err ) {
+                            try {
+                                as.continue();
+                            } catch ( _ ) {
+                                // ignore
+                            }
+                        } else {
+                            try {
+                                parse_data( as, data );
+                            } catch ( _ ) {
+                                // pass
+                            }
+                        }
                     }
                 );
+                as.waitExternal();
             }
-
-            read_as.setCancel( ( as ) => {
-                read_as = null; // see readFile above
-            } );
         } );
     };
 
